fixed double scrollbar

--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -1,6 +1,9 @@
 .sidebar {
-    min-width: 22rem;
+    position: sticky;
+    top: 0;
+    height: 100vh;
     width: 22rem;
+    min-width: 22rem;
 }
 
 .step-vertical {
